src/test/resources/valid/Invariant2.sc
/* (c) https://github.com/MontiCore/monticore */
statechart Invariant2 {
  state Foo [true];
}